tests/error/array_errors/use_after_implicit_copy.err
Error: Copy violation (at $FILE:11:10)
   | 
 9 | def main(xs: array[int, 2] @ owned) -> array[int, 2]:
10 |    ys = xs
11 |    return xs
   |           ^^ Variable `xs` with non-copyable type `array[int, 2]` cannot
   |              be returned ...
   | 
10 |    ys = xs
   |         -- since it was already moved here

Guppy compilation failed due to 1 previous error
